api/swim_form/src/tests/derive/form/double_body_attr.stderr
error: At most one field can replace the body.
  --> $DIR/double_body_attr.rs:22:16
   |
22 |         #[form(body)]
   |                ^^^^
